Meta 2/y.output
Terminals unused in grammar

    ARROW
    RESERVED


Grammar

    0 $accept: Program $end

    1 Program: CLASS IDENTIFIER LBRACE ProgramElements RBRACE

    2 ProgramElements: ε
    3                | ProgramElements MethodDecl
    4                | ProgramElements FieldDecl
    5                | ProgramElements SEMICOLON

    6 MethodDecl: PUBLIC STATIC MethodHeader MethodBody

    7 FieldDecl: PUBLIC STATIC Type IDENTIFIER IdList SEMICOLON
    8          | error SEMICOLON

    9 VarDecl: Type IDENTIFIER IdList SEMICOLON

   10 IdList: ε
   11       | IdList COMMA IDENTIFIER

   12 Type: BOOL
   13     | INT
   14     | DOUBLE

   15 MethodHeader: Type IDENTIFIER LPAR OptFormalParams RPAR
   16             | VOID IDENTIFIER LPAR OptFormalParams RPAR

   17 OptFormalParams: ε
   18                | FormalParams

   19 FormalParams: Type IDENTIFIER FormalParamsRest
   20             | STRING LSQ RSQ IDENTIFIER

   21 FormalParamsRest: ε
   22                 | FormalParamsRest COMMA Type IDENTIFIER

   23 MethodBody: LBRACE StatementAndVarDeclList RBRACE

   24 StatementAndVarDeclList: ε
   25                        | StatementAndVarDeclList Statement
   26                        | StatementAndVarDeclList VarDecl

   27 StatementList: ε
   28              | StatementList Statement

   29 Statement: LBRACE StatementList RBRACE
   30          | IF LPAR Expr RPAR Statement
   31          | IF LPAR Expr RPAR Statement ELSE Statement
   32          | WHILE LPAR Expr RPAR Statement
   33          | RETURN OptExpr SEMICOLON
   34          | MethodInvocation SEMICOLON
   35          | Assignment SEMICOLON
   36          | ParseArgs SEMICOLON
   37          | PRINT LPAR ExprOrStrlit RPAR SEMICOLON
   38          | error SEMICOLON
   39          | SEMICOLON

   40 OptExpr: ε
   41        | Expr

   42 ExprOrStrlit: Expr
   43             | STRLIT

   44 MethodInvocation: IDENTIFIER LPAR OptExprList RPAR
   45                 | IDENTIFIER LPAR error RPAR

   46 OptExprList: ε
   47            | ExprList

   48 ExprList: Expr
   49         | ExprList COMMA Expr

   50 $@1: ε

   51 Assignment: Expr ASSIGN $@1 Expr

   52 ParseArgs: PARSEINT LPAR IDENTIFIER LSQ Expr RSQ RPAR
   53          | PARSEINT LPAR error RPAR

   54 Expr: Expr PLUS Expr
   55     | Expr MINUS Expr
   56     | Expr STAR Expr
   57     | Expr DIV Expr
   58     | Expr MOD Expr
   59     | Expr AND Expr
   60     | Expr OR Expr
   61     | Expr XOR Expr
   62     | Expr LSHIFT Expr
   63     | Expr RSHIFT Expr
   64     | Expr EQ Expr
   65     | Expr GE Expr
   66     | Expr GT Expr
   67     | Expr LE Expr
   68     | Expr LT Expr
   69     | Expr NE Expr
   70     | MINUS Expr
   71     | PLUS Expr
   72     | NOT Expr
   73     | LPAR Expr RPAR
   74     | LPAR error RPAR
   75     | MethodInvocation
   76     | Assignment
   77     | ParseArgs
   78     | IDENTIFIER OptDotLength
   79     | NATURAL
   80     | DECIMAL
   81     | BOOLLIT

   82 OptDotLength: ε
   83             | DOTLENGTH


Terminals, with rules where they appear

    $end (0) 0
    error (256) 8 38 45 53 74
    BOOL (258) 12
    CLASS (259) 1
    DOTLENGTH (260) 83
    DOUBLE (261) 14
    ELSE (262) 31
    IF (263) 30 31
    INT (264) 13
    PRINT (265) 37
    PARSEINT (266) 52 53
    PUBLIC (267) 6 7
    RETURN (268) 33
    STATIC (269) 6 7
    STRING (270) 20
    VOID (271) 16
    WHILE (272) 32
    AND (273) 59
    ASSIGN (274) 51
    STAR (275) 56
    COMMA (276) 11 22 49
    DIV (277) 57
    EQ (278) 64
    GE (279) 65
    GT (280) 66
    LBRACE (281) 1 23 29
    LE (282) 67
    LPAR (283) 15 16 30 31 32 37 44 45 52 53 73 74
    LSQ (284) 20 52
    LT (285) 68
    MINUS (286) 55 70
    MOD (287) 58
    NE (288) 69
    NOT (289) 72
    OR (290) 60
    PLUS (291) 54 71
    RBRACE (292) 1 23 29
    RPAR (293) 15 16 30 31 32 37 44 45 52 53 73 74
    RSQ (294) 20 52
    SEMICOLON (295) 5 7 8 9 33 34 35 36 37 38 39
    ARROW (296)
    LSHIFT (297) 62
    RSHIFT (298) 63
    XOR (299) 61
    IDENTIFIER <str> (300) 1 7 9 11 15 16 19 20 22 44 45 52 78
    NATURAL <str> (301) 79
    DECIMAL <str> (302) 80
    STRLIT <str> (303) 43
    BOOLLIT <str> (304) 81
    RESERVED <str> (305)
    IF_WITHOUT_ELSE (306)
    UNARY_PLUS (307)
    UNARY_MINUS (308)


Nonterminals, with rules where they appear

    $accept (54)
        on left: 0
    Program <node> (55)
        on left: 1
        on right: 0
    ProgramElements <node> (56)
        on left: 2 3 4 5
        on right: 1 3 4 5
    MethodDecl <node> (57)
        on left: 6
        on right: 3
    FieldDecl <node> (58)
        on left: 7 8
        on right: 4
    VarDecl <node> (59)
        on left: 9
        on right: 26
    IdList <node> (60)
        on left: 10 11
        on right: 7 9 11
    Type <node> (61)
        on left: 12 13 14
        on right: 7 9 15 19 22
    MethodHeader <node> (62)
        on left: 15 16
        on right: 6
    OptFormalParams <node> (63)
        on left: 17 18
        on right: 15 16
    FormalParams <node> (64)
        on left: 19 20
        on right: 18
    FormalParamsRest <node> (65)
        on left: 21 22
        on right: 19 22
    MethodBody <node> (66)
        on left: 23
        on right: 6
    StatementAndVarDeclList <node> (67)
        on left: 24 25 26
        on right: 23 25 26
    StatementList <node> (68)
        on left: 27 28
        on right: 28 29
    Statement <node> (69)
        on left: 29 30 31 32 33 34 35 36 37 38 39
        on right: 25 28 30 31 32
    OptExpr <node> (70)
        on left: 40 41
        on right: 33
    ExprOrStrlit <node> (71)
        on left: 42 43
        on right: 37
    MethodInvocation <node> (72)
        on left: 44 45
        on right: 34 75
    OptExprList <node> (73)
        on left: 46 47
        on right: 44
    ExprList <node> (74)
        on left: 48 49
        on right: 47 49
    Assignment <node> (75)
        on left: 51
        on right: 35 76
    $@1 (76)
        on left: 50
        on right: 51
    ParseArgs <node> (77)
        on left: 52 53
        on right: 36 77
    Expr <node> (78)
        on left: 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81
        on right: 30 31 32 41 42 48 49 51 52 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73
    OptDotLength <node> (79)
        on left: 82 83
        on right: 78


State 0

    0 $accept: • Program $end

    CLASS  shift, and go to state 1

    Program  go to state 2


State 1

    1 Program: CLASS • IDENTIFIER LBRACE ProgramElements RBRACE

    IDENTIFIER  shift, and go to state 3


State 2

    0 $accept: Program • $end

    $end  shift, and go to state 4


State 3

    1 Program: CLASS IDENTIFIER • LBRACE ProgramElements RBRACE

    LBRACE  shift, and go to state 5


State 4

    0 $accept: Program $end •

    $default  accept


State 5

    1 Program: CLASS IDENTIFIER LBRACE • ProgramElements RBRACE

    $default  reduce using rule 2 (ProgramElements)

    ProgramElements  go to state 6


State 6

    1 Program: CLASS IDENTIFIER LBRACE ProgramElements • RBRACE
    3 ProgramElements: ProgramElements • MethodDecl
    4                | ProgramElements • FieldDecl
    5                | ProgramElements • SEMICOLON

    error      shift, and go to state 7
    PUBLIC     shift, and go to state 8
    RBRACE     shift, and go to state 9
    SEMICOLON  shift, and go to state 10

    MethodDecl  go to state 11
    FieldDecl   go to state 12


State 7

    8 FieldDecl: error • SEMICOLON

    SEMICOLON  shift, and go to state 13


State 8

    6 MethodDecl: PUBLIC • STATIC MethodHeader MethodBody
    7 FieldDecl: PUBLIC • STATIC Type IDENTIFIER IdList SEMICOLON

    STATIC  shift, and go to state 14


State 9

    1 Program: CLASS IDENTIFIER LBRACE ProgramElements RBRACE •

    $default  reduce using rule 1 (Program)


State 10

    5 ProgramElements: ProgramElements SEMICOLON •

    $default  reduce using rule 5 (ProgramElements)


State 11

    3 ProgramElements: ProgramElements MethodDecl •

    $default  reduce using rule 3 (ProgramElements)


State 12

    4 ProgramElements: ProgramElements FieldDecl •

    $default  reduce using rule 4 (ProgramElements)


State 13

    8 FieldDecl: error SEMICOLON •

    $default  reduce using rule 8 (FieldDecl)


State 14

    6 MethodDecl: PUBLIC STATIC • MethodHeader MethodBody
    7 FieldDecl: PUBLIC STATIC • Type IDENTIFIER IdList SEMICOLON

    BOOL    shift, and go to state 15
    DOUBLE  shift, and go to state 16
    INT     shift, and go to state 17
    VOID    shift, and go to state 18

    Type          go to state 19
    MethodHeader  go to state 20


State 15

   12 Type: BOOL •

    $default  reduce using rule 12 (Type)


State 16

   14 Type: DOUBLE •

    $default  reduce using rule 14 (Type)


State 17

   13 Type: INT •

    $default  reduce using rule 13 (Type)


State 18

   16 MethodHeader: VOID • IDENTIFIER LPAR OptFormalParams RPAR

    IDENTIFIER  shift, and go to state 21


State 19

    7 FieldDecl: PUBLIC STATIC Type • IDENTIFIER IdList SEMICOLON
   15 MethodHeader: Type • IDENTIFIER LPAR OptFormalParams RPAR

    IDENTIFIER  shift, and go to state 22


State 20

    6 MethodDecl: PUBLIC STATIC MethodHeader • MethodBody

    LBRACE  shift, and go to state 23

    MethodBody  go to state 24


State 21

   16 MethodHeader: VOID IDENTIFIER • LPAR OptFormalParams RPAR

    LPAR  shift, and go to state 25


State 22

    7 FieldDecl: PUBLIC STATIC Type IDENTIFIER • IdList SEMICOLON
   15 MethodHeader: Type IDENTIFIER • LPAR OptFormalParams RPAR

    LPAR  shift, and go to state 26

    $default  reduce using rule 10 (IdList)

    IdList  go to state 27


State 23

   23 MethodBody: LBRACE • StatementAndVarDeclList RBRACE

    $default  reduce using rule 24 (StatementAndVarDeclList)

    StatementAndVarDeclList  go to state 28


State 24

    6 MethodDecl: PUBLIC STATIC MethodHeader MethodBody •

    $default  reduce using rule 6 (MethodDecl)


State 25

   16 MethodHeader: VOID IDENTIFIER LPAR • OptFormalParams RPAR

    BOOL    shift, and go to state 15
    DOUBLE  shift, and go to state 16
    INT     shift, and go to state 17
    STRING  shift, and go to state 29

    $default  reduce using rule 17 (OptFormalParams)

    Type             go to state 30
    OptFormalParams  go to state 31
    FormalParams     go to state 32


State 26

   15 MethodHeader: Type IDENTIFIER LPAR • OptFormalParams RPAR

    BOOL    shift, and go to state 15
    DOUBLE  shift, and go to state 16
    INT     shift, and go to state 17
    STRING  shift, and go to state 29

    $default  reduce using rule 17 (OptFormalParams)

    Type             go to state 30
    OptFormalParams  go to state 33
    FormalParams     go to state 32


State 27

    7 FieldDecl: PUBLIC STATIC Type IDENTIFIER IdList • SEMICOLON
   11 IdList: IdList • COMMA IDENTIFIER

    COMMA      shift, and go to state 34
    SEMICOLON  shift, and go to state 35


State 28

   23 MethodBody: LBRACE StatementAndVarDeclList • RBRACE
   25 StatementAndVarDeclList: StatementAndVarDeclList • Statement
   26                        | StatementAndVarDeclList • VarDecl

    error       shift, and go to state 36
    BOOL        shift, and go to state 15
    DOUBLE      shift, and go to state 16
    IF          shift, and go to state 37
    INT         shift, and go to state 17
    PRINT       shift, and go to state 38
    PARSEINT    shift, and go to state 39
    RETURN      shift, and go to state 40
    WHILE       shift, and go to state 41
    LBRACE      shift, and go to state 42
    LPAR        shift, and go to state 43
    MINUS       shift, and go to state 44
    NOT         shift, and go to state 45
    PLUS        shift, and go to state 46
    RBRACE      shift, and go to state 47
    SEMICOLON   shift, and go to state 48
    IDENTIFIER  shift, and go to state 49
    NATURAL     shift, and go to state 50
    DECIMAL     shift, and go to state 51
    BOOLLIT     shift, and go to state 52

    VarDecl           go to state 53
    Type              go to state 54
    Statement         go to state 55
    MethodInvocation  go to state 56
    Assignment        go to state 57
    ParseArgs         go to state 58
    Expr              go to state 59


State 29

   20 FormalParams: STRING • LSQ RSQ IDENTIFIER

    LSQ  shift, and go to state 60


State 30

   19 FormalParams: Type • IDENTIFIER FormalParamsRest

    IDENTIFIER  shift, and go to state 61


State 31

   16 MethodHeader: VOID IDENTIFIER LPAR OptFormalParams • RPAR

    RPAR  shift, and go to state 62


State 32

   18 OptFormalParams: FormalParams •

    $default  reduce using rule 18 (OptFormalParams)


State 33

   15 MethodHeader: Type IDENTIFIER LPAR OptFormalParams • RPAR

    RPAR  shift, and go to state 63


State 34

   11 IdList: IdList COMMA • IDENTIFIER

    IDENTIFIER  shift, and go to state 64


State 35

    7 FieldDecl: PUBLIC STATIC Type IDENTIFIER IdList SEMICOLON •

    $default  reduce using rule 7 (FieldDecl)


State 36

   38 Statement: error • SEMICOLON

    SEMICOLON  shift, and go to state 65


State 37

   30 Statement: IF • LPAR Expr RPAR Statement
   31          | IF • LPAR Expr RPAR Statement ELSE Statement

    LPAR  shift, and go to state 66


State 38

   37 Statement: PRINT • LPAR ExprOrStrlit RPAR SEMICOLON

    LPAR  shift, and go to state 67


State 39

   52 ParseArgs: PARSEINT • LPAR IDENTIFIER LSQ Expr RSQ RPAR
   53          | PARSEINT • LPAR error RPAR

    LPAR  shift, and go to state 68


State 40

   33 Statement: RETURN • OptExpr SEMICOLON

    PARSEINT    shift, and go to state 39
    LPAR        shift, and go to state 43
    MINUS       shift, and go to state 44
    NOT         shift, and go to state 45
    PLUS        shift, and go to state 46
    IDENTIFIER  shift, and go to state 49
    NATURAL     shift, and go to state 50
    DECIMAL     shift, and go to state 51
    BOOLLIT     shift, and go to state 52

    $default  reduce using rule 40 (OptExpr)

    OptExpr           go to state 69
    MethodInvocation  go to state 70
    Assignment        go to state 71
    ParseArgs         go to state 72
    Expr              go to state 73


State 41

   32 Statement: WHILE • LPAR Expr RPAR Statement

    LPAR  shift, and go to state 74


State 42

   29 Statement: LBRACE • StatementList RBRACE

    $default  reduce using rule 27 (StatementList)

    StatementList  go to state 75


State 43

   73 Expr: LPAR • Expr RPAR
   74     | LPAR • error RPAR

    error       shift, and go to state 76
    PARSEINT    shift, and go to state 39
    LPAR        shift, and go to state 43
    MINUS       shift, and go to state 44
    NOT         shift, and go to state 45
    PLUS        shift, and go to state 46
    IDENTIFIER  shift, and go to state 49
    NATURAL     shift, and go to state 50
    DECIMAL     shift, and go to state 51
    BOOLLIT     shift, and go to state 52

    MethodInvocation  go to state 70
    Assignment        go to state 71
    ParseArgs         go to state 72
    Expr              go to state 77


State 44

   70 Expr: MINUS • Expr

    PARSEINT    shift, and go to state 39
    LPAR        shift, and go to state 43
    MINUS       shift, and go to state 44
    NOT         shift, and go to state 45
    PLUS        shift, and go to state 46
    IDENTIFIER  shift, and go to state 49
    NATURAL     shift, and go to state 50
    DECIMAL     shift, and go to state 51
    BOOLLIT     shift, and go to state 52

    MethodInvocation  go to state 70
    Assignment        go to state 71
    ParseArgs         go to state 72
    Expr              go to state 78


State 45

   72 Expr: NOT • Expr

    PARSEINT    shift, and go to state 39
    LPAR        shift, and go to state 43
    MINUS       shift, and go to state 44
    NOT         shift, and go to state 45
    PLUS        shift, and go to state 46
    IDENTIFIER  shift, and go to state 49
    NATURAL     shift, and go to state 50
    DECIMAL     shift, and go to state 51
    BOOLLIT     shift, and go to state 52

    MethodInvocation  go to state 70
    Assignment        go to state 71
    ParseArgs         go to state 72
    Expr              go to state 79


State 46

   71 Expr: PLUS • Expr

    PARSEINT    shift, and go to state 39
    LPAR        shift, and go to state 43
    MINUS       shift, and go to state 44
    NOT         shift, and go to state 45
    PLUS        shift, and go to state 46
    IDENTIFIER  shift, and go to state 49
    NATURAL     shift, and go to state 50
    DECIMAL     shift, and go to state 51
    BOOLLIT     shift, and go to state 52

    MethodInvocation  go to state 70
    Assignment        go to state 71
    ParseArgs         go to state 72
    Expr              go to state 80


State 47

   23 MethodBody: LBRACE StatementAndVarDeclList RBRACE •

    $default  reduce using rule 23 (MethodBody)


State 48

   39 Statement: SEMICOLON •

    $default  reduce using rule 39 (Statement)


State 49

   44 MethodInvocation: IDENTIFIER • LPAR OptExprList RPAR
   45                 | IDENTIFIER • LPAR error RPAR
   78 Expr: IDENTIFIER • OptDotLength

    DOTLENGTH  shift, and go to state 81
    LPAR       shift, and go to state 82

    $default  reduce using rule 82 (OptDotLength)

    OptDotLength  go to state 83


State 50

   79 Expr: NATURAL •

    $default  reduce using rule 79 (Expr)


State 51

   80 Expr: DECIMAL •

    $default  reduce using rule 80 (Expr)


State 52

   81 Expr: BOOLLIT •

    $default  reduce using rule 81 (Expr)


State 53

   26 StatementAndVarDeclList: StatementAndVarDeclList VarDecl •

    $default  reduce using rule 26 (StatementAndVarDeclList)


State 54

    9 VarDecl: Type • IDENTIFIER IdList SEMICOLON

    IDENTIFIER  shift, and go to state 84


State 55

   25 StatementAndVarDeclList: StatementAndVarDeclList Statement •

    $default  reduce using rule 25 (StatementAndVarDeclList)


State 56

   34 Statement: MethodInvocation • SEMICOLON
   75 Expr: MethodInvocation •

    SEMICOLON  shift, and go to state 85

    $default  reduce using rule 75 (Expr)


State 57

   35 Statement: Assignment • SEMICOLON
   76 Expr: Assignment •

    SEMICOLON  shift, and go to state 86

    $default  reduce using rule 76 (Expr)


State 58

   36 Statement: ParseArgs • SEMICOLON
   77 Expr: ParseArgs •

    SEMICOLON  shift, and go to state 87

    $default  reduce using rule 77 (Expr)


State 59

   51 Assignment: Expr • ASSIGN $@1 Expr
   54 Expr: Expr • PLUS Expr
   55     | Expr • MINUS Expr
   56     | Expr • STAR Expr
   57     | Expr • DIV Expr
   58     | Expr • MOD Expr
   59     | Expr • AND Expr
   60     | Expr • OR Expr
   61     | Expr • XOR Expr
   62     | Expr • LSHIFT Expr
   63     | Expr • RSHIFT Expr
   64     | Expr • EQ Expr
   65     | Expr • GE Expr
   66     | Expr • GT Expr
   67     | Expr • LE Expr
   68     | Expr • LT Expr
   69     | Expr • NE Expr
